--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
-    "three": "^0.123.0"
+    "three": "^0.123.0",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {}
 }
