--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "three": "^0.123.0",
+    "vue-blotter": "^0.1.3",
     "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {}
