--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
+    "pdfvuer": "^1.7.5",
     "three": "^0.123.0",
     "vue-blotter": "^0.1.3",
     "vue-scrollto": "^2.20.0"
